src/objects/CRM_WF_Cartas_Origen__c.object
<CustomObject>
    <fields>
        <fullName>GBL_WF_Generador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo que trae el Contacto con función Generador</description>
        <label>Generador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.GBL_WF_Funcion__c</field>
                <operation>equals</operation>
                <value>Generador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cartas Origen</relationshipLabel>
        <relationshipName>Cartas_Origen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Jefe__c</fullName>
        <formula>GBL_WF_Nombre_Del_Solicitante__r.GBL_WF_Jefe__r.GBL_WF_Nombre_Completo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jefe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Custodio_1__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Nombre_Custodio_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Custodio_2__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Nombre_Custodio_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Nombre_Del_Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de tipo relación de búsqueda, permite elegir solo los contactos de tipo de registro &quot;Usuarios&quot;</description>
        <label>Solicitante</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Usuarios</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cartas Origen (Solicitante)</relationshipLabel>
        <relationshipName>Cartas_Origen1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Suplente__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow que trae el nombre del Suplente del Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Suplente__r.GBL_WF_Nombre_Completo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suplente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tel_Ext_autorizador__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, trae el teléfono del Autorizador del Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Autorizador_DG__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext autorizador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tel_Ext_director__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow, trae el teléfono del Director asociado al Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Director__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tel_Ext_generador__c</fullName>
        <formula>GBL_WF_Generador__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campo de tipo fórmula para la aplicación Workflow que trae el teléfono del Generador de la Carta Origen</inlineHelpText>
        <label>Tel/Ext generador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tel_Ext_solicitante__c</fullName>
        <description>Campo de tipo fórmula para la aplicación Workflow que trae el teléfono de quien solicita la carta origen</description>
        <formula>GBL_WF_Nombre_Del_Solicitante__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Tel_Ext_suplente__c</fullName>
        <description>Campo para la aplicación Workflow que trae el teléfono del Suplente del Generador</description>
        <formula>GBL_WF_Generador__r.GBL_WF_Suplente__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel/Ext suplente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Telefono_Custodio_1__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Telefono_Custodio_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Telefono_Custodio_2__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Telefono_Custodio_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teléfono Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Usuario_Red_Custodio_1__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Usuario_Red_Custodio_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usuario Red Custodio 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBL_WF_Usuario_Red_Custodio_2__c</fullName>
        <formula>GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Usuario_Red_Custodio_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usuario Red Custodio 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monitoreo_Numero_De_Bases__c</fullName>
        <description>Campo de tipo formula para la aplicación Workflow que monitorea el número de bases a enviar entre la Carta Origen y las Cartas Recurrentes</description>
        <formula>IF ( CRM_WF_Numero_De_Bases_A_Enviar__c &lt;&gt; CRM_WF_Total_Bases_En_C_Recurrentes__c, IMAGE (&quot;/servlet/servlet.FileDownload?file=0151U000001YpSn&quot;, &quot;Red&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSp&quot;, &quot;Green&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitoreo Número de Bases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monitoreo_Total_De_Registros__c</fullName>
        <description>Campo de tipo formula para la aplicación Workflow que monitorea el Total de Registros entre la Carta Origen y las Cartas Recurrentes</description>
        <formula>IF ( CRM_WF_Total_de_Registros__c &lt;&gt; CRM_WF_Total_Registros_En_C_Recurrentes__c , IMAGE (&quot;/servlet/servlet.FileDownload?file=0151U000001YpSn&quot;, &quot;Red&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151U000001YpSp&quot;, &quot;Green&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitoreo Total de Registros</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Validacion_de_Bases__c</fullName>
        <description>Campo de tipo formula para la aplicación Workflow que calcula el valor de Bases a enviar en la Carta Origen</description>
        <formula>CRM_WF_Numero_De_Bases_A_Enviar__c - CRM_WF_Total_Bases_En_C_Recurrentes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validación de Bases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Validacion_de_Registros__c</fullName>
        <description>Campo de tipo formula para la aplicación Workflow que calcula el valor de Registros a enviar en la Carta Origen</description>
        <formula>CRM_WF_Total_de_Registros__c -  CRM_WF_Total_Registros_En_C_Recurrentes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validación de Registros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Carta Origen</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CRM_WF_Etapa_Carta_Custodia__c</columns>
        <columns>CRM_WF_Tipo_de_Envio__c</columns>
        <columns>CRM_WF_Total_Bases_En_C_Recurrentes__c</columns>
        <columns>CRM_WF_Total_De_C_Recurrentes__c</columns>
        <columns>CRM_WF_Total_de_Registros__c</columns>
        <columns>CRM_WF_Total_Registros_En_C_Recurrentes__c</columns>
        <columns>MX_WF_Validacion_de_Bases__c</columns>
        <columns>MX_WF_Validacion_de_Registros__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Cartas_en_Documentacion</fullName>
        <columns>NAME</columns>
        <columns>CRM_WF_Etapa_Carta_Custodia__c</columns>
        <columns>CRM_WF_Frecuencia__c</columns>
        <columns>CRM_WF_A_Partir_De__c</columns>
        <columns>CRM_WF_Hasta_Carta_Custodia__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_WF_Etapa_Carta_Custodia__c</field>
            <operation>equals</operation>
            <value>Solicitud</value>
        </filters>
        <label>Cartas en Documentación</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{00000}</displayFormat>
        <label>Folio Carta Origen</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cartas Origen</pluralLabel>
    <recordTypes>
        <fullName>CRM_WF_Carta_Origen</fullName>
        <active>true</active>
        <label>Carta Origen</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_WF_Carta_Origen_Readonly</fullName>
        <active>true</active>
        <label>Carta Origen Readonly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRM_WF_Canal_De_Com_Iguales_Prov_Y_Carta</fullName>
        <active>true</active>
        <description>Regla de Validación que no permite guardar un registro de carta Origen si los canales de comunicación entre el proveedor (cuenta) y la Carta Origen son distintos.</description>
        <errorConditionFormula>TEXT (CRM_WF_Canales_Com_Carta_Custodia__c) &lt;&gt;  TEXT ( GBL_WF_Emp_Area_Bancomer__r.GBL_WF_Canales_De_Comunicacion__c  )</errorConditionFormula>
        <errorDisplayField>CRM_WF_Canales_Com_Carta_Custodia__c</errorDisplayField>
        <errorMessage>Los canales de comunicación entre el proveedor (cuenta) y la Carta Origen no pueden ser distintos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Cartas_R_De_Acuerdo_A_Frecuencia</fullName>
        <active>true</active>
        <description>Regla de validación para que el Total de Cartas recurrentes permitidas este dentro del rango por cada Frecuencia</description>
        <errorConditionFormula>AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Única Vez&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 1 ))  ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Semanal&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 12 ))   ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Quincenal&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 6 ))  ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Mensual&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 3 ))    ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Bimestral&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 2 ))  ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Trimestral&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 1 )) ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Semestral&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 1 ))  ||
AND ( ISPICKVAL ( CRM_WF_Frecuencia__c , &quot;Anual&quot;),( CRM_WF_Total_De_C_Recurrentes__c &gt; 1 ))</errorConditionFormula>
        <errorDisplayField>CRM_WF_Frecuencia__c</errorDisplayField>
        <errorMessage>El Total de Cartas recurrentes no puede ser mayor al rango correspondiente por cada Frecuencia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Justi_Cancelacion_CO_Obligatoria</fullName>
        <active>true</active>
        <description>Si seleccionas el valor Si en el campo ¿Desea cancelar la Carta Origen? debes agregar una Justificación de Cancelación de Carta</description>
        <errorConditionFormula>AND( 
ISPICKVAL( CRM_WF_Desea_Cancelar_La_Carta_Origen__c , &quot;Si&quot;), 
CRM_WF_Just_De_Cancelacin_Carta__c = &quot;&quot;,
RecordType.Name = &quot;Carta Origen&quot;  || 
RecordType.Name = &quot;Carta Origen Readonly&quot; 
)</errorConditionFormula>
        <errorDisplayField>CRM_WF_Just_De_Cancelacin_Carta__c</errorDisplayField>
        <errorMessage>Debes agregar una Justificación de Cancelación para la Carta Origen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_No_De_Bases_Solicitadas_Mayor_A_1</fullName>
        <active>true</active>
        <errorConditionFormula>CRM_WF_Numero_De_Bases_A_Enviar__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>CRM_WF_Numero_De_Bases_A_Enviar__c</errorDisplayField>
        <errorMessage>El número de bases solicitadas debe ser mayor o igual a 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_No_De_Registros_Mayor_A_1</fullName>
        <active>true</active>
        <errorConditionFormula>CRM_WF_Total_de_Registros__c &lt; 1</errorConditionFormula>
        <errorDisplayField>CRM_WF_Total_de_Registros__c</errorDisplayField>
        <errorMessage>El número total de registros debe ser mayor o igual a 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Val_A_Partir_De_En_Rango</fullName>
        <active>false</active>
        <errorConditionFormula>CRM_WF_A_Partir_De__c &lt; 
CRM_WF_Campana_Carta_Custodia__r.StartDate 

|| 

CRM_WF_A_Partir_De__c &gt;
CRM_WF_Campana_Carta_Custodia__r.EndDate</errorConditionFormula>
        <errorDisplayField>CRM_WF_A_Partir_De__c</errorDisplayField>
        <errorMessage>La fecha inicial de la Carta Origen debe estar dentro del rango de la vigencia autorizada en la Campaña</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Validacion_Bases</fullName>
        <active>true</active>
        <errorConditionFormula>CRM_WF_Total_Bases_En_C_Recurrentes__c &gt;  CRM_WF_Numero_De_Bases_A_Enviar__c</errorConditionFormula>
        <errorDisplayField>CRM_WF_Numero_De_Bases_A_Enviar__c</errorDisplayField>
        <errorMessage>El total de bases en Cartas recurrentes no puede ser mayor al total de bases de la campaña</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRM_WF_Validacion_Registros</fullName>
        <active>true</active>
        <errorConditionFormula>CRM_WF_Total_Registros_En_C_Recurrentes__c &gt;  CRM_WF_Total_de_Registros__c</errorConditionFormula>
        <errorDisplayField>CRM_WF_Total_de_Registros__c</errorDisplayField>
        <errorMessage>El total de registros en cartas recurrentes no puede ser mayor al total de registros de la campaña</errorMessage>
    </validationRules>
</CustomObject>